--- a/crawler/pom.xml
+++ b/crawler/pom.xml
@@ -24,6 +24,8 @@
         <java.version>1.8</java.version>
         <webmagic.version>0.6.1</webmagic.version>
         <retrofit2.version>2.2.0</retrofit2.version>
+        <mapstruct.version>1.2.0.Beta2</mapstruct.version>
+        <swagger2.version>2.6.0</swagger2.version>
     </properties>
 
     <dependencies>
@@ -53,6 +55,7 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-devtools</artifactId>
             <scope>runtime</scope>
+            <optional>true</optional>
         </dependency>
         <dependency>
             <groupId>mysql</groupId>
@@ -70,28 +73,17 @@
             <scope>test</scope>
         </dependency>
 
-        <!--Third party libs start-->
         <dependency>
             <groupId>org.jsoup</groupId>
             <artifactId>jsoup</artifactId>
             <version>1.10.2</version>
         </dependency>
+
         <dependency>
             <groupId>io.reactivex.rxjava2</groupId>
             <artifactId>rxjava</artifactId>
-            <version>2.0.7</version>
+            <version>2.0.8</version>
         </dependency>
-
-        <!--<dependency>-->
-        <!--<groupId>us.codecraft</groupId>-->
-        <!--<artifactId>webmagic-core</artifactId>-->
-        <!--<version>${webmagic.version}</version>-->
-        <!--</dependency>-->
-        <!--<dependency>-->
-        <!--<groupId>us.codecraft</groupId>-->
-        <!--<artifactId>webmagic-extension</artifactId>-->
-        <!--<version>${webmagic.version}</version>-->
-        <!--</dependency>-->
 
         <dependency>
             <groupId>com.squareup.retrofit2</groupId>
@@ -109,7 +101,29 @@
             <version>${retrofit2.version}</version>
         </dependency>
 
-        <!--Third party libs end-->
+        <dependency>
+            <groupId>org.mapstruct</groupId>
+            <artifactId>mapstruct</artifactId>
+            <version>${mapstruct.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.mapstruct</groupId>
+            <artifactId>mapstruct-processor</artifactId>
+            <version>${mapstruct.version}</version>
+            <optional>true</optional>
+        </dependency>
+
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-swagger2</artifactId>
+            <version>${swagger2.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-swagger-ui</artifactId>
+            <version>${swagger2.version}</version>
+        </dependency>
+
     </dependencies>
 
     <dependencyManagement>
@@ -141,6 +155,27 @@
                     <!--允许覆盖生成的文件-->
                     <overwrite>true</overwrite>
                 </configuration>
+            </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.6.1</version>
+                <configuration>
+                    <annotationProcessorPaths>
+                        <path>
+                            <groupId>org.mapstruct</groupId>
+                            <artifactId>mapstruct-processor</artifactId>
+                            <version>${mapstruct.version}</version>
+                        </path>
+                    </annotationProcessorPaths>
+                    <compilerArgs>
+                        <compilerArg>
+                            -Amapstruct.defaultComponentModel=spring
+                        </compilerArg>
+                    </compilerArgs>
+                </configuration>
+
             </plugin>
 
         </plugins>
