add track list to dto

--- a/crawler/src/main/resources/application.properties
+++ b/crawler/src/main/resources/application.properties
@@ -20,4 +20,6 @@ db.table2=track
 # Log settings
 logging.config=classpath:logback-spring.xml
 # Devtools Settings
-spring.devtools.livereload.enabled=true
+#spring.devtools.livereload.enabled=true
+# MyBatis Settings
+mybatis.configuration.map-underscore-to-camel-case=true
