--- a/crawler/src/main/resources/application.properties
+++ b/crawler/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 # Application Settings
 spring.output.ansi.enabled=detect
-spring.application.name=crawler-service
+spring.application.name=journal-service
 server.port=9000
 eureka.client.serviceUrl.defaultZone=http://localhost:1111/eureka/
 # Profiles Settings
@@ -18,6 +18,7 @@ modelPackage=com.tneciv.poseidon.entity
 db.table1=journal
 db.table2=track
 # Log settings
+logging.level.root=DEBUG
 logging.config=classpath:logback-spring.xml
 # Devtools Settings
 #spring.devtools.livereload.enabled=true
