--- a/authservice/src/main/resources/application.properties
+++ b/authservice/src/main/resources/application.properties
@@ -8,3 +8,5 @@ spring.datasource.driverClassName=com.mysql.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/auth?useUnicode=true&characterEncoding=utf8&autoReconnect=true&failOverReadOnly=false
 spring.datasource.username=tneciv
 spring.datasource.password=passw0rd.
+# Log Settings
+logging.root.level=DEBUG
