--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -7,4 +7,6 @@ eureka.client.serviceUrl.defaultZone=http://localhost:1111/eureka/
 # Zuul config
 zuul.routes.journal.path=/music/**
 zuul.routes.journal.serviceId=journal-service
+zuul.routes.auth.path=/auth/**
+zuul.routes.auth.serviceId=auth-service
 management.security.enabled=false
