--- a/crawler/src/main/resources/application.properties
+++ b/crawler/src/main/resources/application.properties
@@ -1,5 +1,4 @@
 # Application Settings
-spring.output.ansi.enabled=detect
 spring.application.name=journal-service
 server.port=8080
 eureka.client.serviceUrl.defaultZone=http://localhost:1111/eureka/
@@ -24,3 +23,9 @@ logging.config=classpath:logback-spring.xml
 #spring.devtools.livereload.enabled=true
 # MyBatis Settings
 mybatis.configuration.map-underscore-to-camel-case=true
+# Page helper settings
+pagehelper.helperDialect=mysql
+pagehelper.reasonable=true
+pagehelper.supportMethodsArguments=true
+pagehelper.params=count=countSql
+pagehelper.page-size-zero=true
