--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -17,5 +17,5 @@ spring.http.encoding.enabled=true
 # Force the encoding to the configured charset on HTTP requests and responses.
 spring.http.encoding.force=true
 # Zuul config
-zuul.routes.journal.path=/music/**
+zuul.routes.journal.path=/luoo/**
 zuul.routes.journal.serviceId=journal-service
