--- a/ionic-app/package.json
+++ b/ionic-app/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "app",
+  "name": "ionic-app",
   "version": "0.0.1",
   "author": "Ionic Framework",
   "homepage": "http://ionicframework.com/",
@@ -35,5 +35,5 @@
     "@ionic/cli-plugin-cordova": "1.0.0-beta0",
     "@ionic/cli-plugin-ionic-angular": "1.0.0-beta0"
   },
-  "description": "Poseidon app ."
+  "description": "An Ionic project"
 }
