--- a/ionic-app/package.json
+++ b/ionic-app/package.json
@@ -31,9 +31,9 @@
   },
   "devDependencies": {
     "@ionic/app-scripts": "1.3.5",
-    "typescript": "~2.2.1",
-    "@ionic/cli-plugin-cordova": "1.0.0-rc.0",
-    "@ionic/cli-plugin-ionic-angular": "1.0.0-rc.0"
+    "@ionic/cli-plugin-cordova": "1.0.0-rc.1",
+    "@ionic/cli-plugin-ionic-angular": "1.0.0-rc.1",
+    "typescript": "~2.2.1"
   },
   "description": "An Ionic project"
 }
