--- a/luoo/src/main/resources/application.properties
+++ b/luoo/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 # Application Settings
+spring.output.ansi.enabled=always
 spring.application.name=journal-service
 server.port=8080
 eureka.client.serviceUrl.defaultZone=http://localhost:1111/eureka/
@@ -17,10 +18,7 @@ modelPackage=com.tneciv.poseidon.entity
 db.table1=journal
 db.table2=track
 # Log settings
-logging.level.root=DEBUG
 logging.config=classpath:logback-spring.xml
-# Devtools Settings
-#spring.devtools.livereload.enabled=true
 # MyBatis Settings
 mybatis.configuration.map-underscore-to-camel-case=true
 # Page helper settings
