--- a/luoo/src/main/resources/application.properties
+++ b/luoo/src/main/resources/application.properties
@@ -6,10 +6,21 @@ eureka.client.serviceUrl.defaultZone=http://localhost:1111/eureka/
 # Profiles Settings
 spring.profiles.active=dev
 # DataSource Settings
-#spring.datasource.driverClassName=com.mysql.jdbc.Driver
-#spring.datasource.url=jdbc:mysql://localhost:3306/luoo?useUnicode=true&characterEncoding=utf8&autoReconnect=true&failOverReadOnly=false
-#spring.datasource.username=tneciv
-#spring.datasource.password=passw0rd.
+spring.datasource.driverClassName=com.mysql.jdbc.Driver
+spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
+spring.datasource.filters=stat
+spring.datasource.maxActive=20
+spring.datasource.initialSize=1
+spring.datasource.maxWait=60000
+spring.datasource.minIdle=1
+spring.datasource.timeBetweenEvictionRunsMillis=60000
+spring.datasource.minEvictableIdleTimeMillis=300000
+spring.datasource.validationQuery=select 'x'
+spring.datasource.testWhileIdle=true
+spring.datasource.testOnBorrow=false
+spring.datasource.testOnReturn=false
+spring.datasource.poolPreparedStatements=true
+spring.datasource.maxOpenPreparedStatements=20
 # MyBatis gene settings
 jdbc.jarDirection=/Users/Tneciv/mvn/repository/mysql/mysql-connector-java/5.1.41/mysql-connector-java-5.1.41.jar
 targetProject=src/main/java
