--- a/luoo/pom.xml
+++ b/luoo/pom.xml
@@ -14,7 +14,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>1.5.3.RELEASE</version>
+        <version>1.5.4.RELEASE</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
 
@@ -23,7 +23,10 @@
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <java.version>1.8</java.version>
         <retrofit2.version>2.2.0</retrofit2.version>
-        <swagger2.version>2.6.1</swagger2.version>
+        <swagger2.version>2.7.0</swagger2.version>
+        <druid.version>1.1.0</druid.version>
+        <mybatis.version>1.3.0</mybatis.version>
+        <pagehelper.version>1.1.1</pagehelper.version>
     </properties>
 
     <dependencies>
@@ -38,7 +41,7 @@
         <dependency>
             <groupId>org.mybatis.spring.boot</groupId>
             <artifactId>mybatis-spring-boot-starter</artifactId>
-            <version>1.3.0</version>
+            <version>${mybatis.version}</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -117,12 +120,12 @@
         <dependency>
             <groupId>com.github.pagehelper</groupId>
             <artifactId>pagehelper-spring-boot-starter</artifactId>
-            <version>1.1.1</version>
+            <version>${pagehelper.version}</version>
         </dependency>
         <dependency>
             <groupId>com.alibaba</groupId>
             <artifactId>druid</artifactId>
-            <version>1.0.29</version>
+            <version>${druid.version}</version>
         </dependency>
 
     </dependencies>
