--- a/api-gateway/src/main/frontend/package.json
+++ b/api-gateway/src/main/frontend/package.json
@@ -8,7 +8,7 @@
     "build": "ng build -prod",
     "postbuild": "npm run deploy",
     "predeploy": "rimraf ../resources/static/ && mkdirp ../resources/static",
-    "deploy": "copyfiles -f dist/** ../resources/static",
+    "deploy": "copyfiles -u 1 \"./dist/**/*\" ../resources/static",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
